--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,15 +14,21 @@ permissions:
 
 jobs:
   release-please:
-    # TODO: @memes - enable in real go project
-    if: false
     runs-on: ubuntu-latest
     steps:
       - name: Release Please
+        id: release-please
         uses: GoogleCloudPlatform/release-please-action@v4.1.0
         with:
           release-type: go
-          package-name: go-template
-          # TODO @memes - If other actions are not going to be triggered by the
-          # result of this action this can be removed.
+          package-name: f5xc
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+      - name: Trigger Go Report update
+        if: ${{ steps.release-please.outputs.release_created }}
+        uses: fjogeleit/http-request-action@v1.15.2
+        with:
+          url: 'https://goreportcard.com/checks'
+          method: 'POST'
+          contentType: 'application/x-www-form-urlencoded'
+          data: 'repo=github.com/${{ github.repository }}'
+          preventFailureOnNoResponse: 'true'
