--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,6 +6,10 @@ run:
 issues:
   max-issues-per-linter: 0
   max-same-issues: 0
+  exclude-rules:
+    - path: _test.go
+      linters:
+        - dupl
 linters:
   disable-all: true
   enable:
@@ -62,7 +66,6 @@ linters:
     - whitespace
     - wrapcheck
 linters-settings:
-  # TODO @memes - update the list of allowed imports
   depguard:
     rules:
       main:
@@ -72,12 +75,14 @@ linters-settings:
         allow:
           - $gostd
           - github.com/memes
+          - software.sslmate.com/src/go-pkcs12
       test:
         files:
           - $test
         allow:
           - $gostd
           - github.com/memes
+          - software.sslmate.com/src/go-pkcs12
   errcheck:
     check-type-assertions: true
     check-blank: true
