feat: Commiting work-in-progress for TF provider
The library supports creating blindfolded secrets, and is required for a
release of terraform-provider-f5xc.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 
 # Ignore generated Gorelease binaries
 dist/
+
+# Don't commit testing CSRs or intermediary JSON
+testdata/*.json
+testdata/*.csr
+testdata/ca-key.pem
