--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,18 +1,20 @@
 # spell-checker: disable
 ---
+version: "2"
 run:
   concurrency: 6
   timeout: 5m
 issues:
   max-issues-per-linter: 0
   max-same-issues: 0
-  exclude-rules:
-    - path: _test.go
-      linters:
-        - dupl
   uniq-by-line: false
 linters:
-  disable-all: true
+  default: none
+  exclusions:
+    rules:
+      - path: _test.go
+        linters:
+          - dupl
   enable:
     - asciicheck
     - bodyclose
@@ -57,84 +59,81 @@ linters:
     - staticcheck
     - stylecheck
     - thelper
-    - typecheck
     - unconvert
     - unparam
     - unused
     - whitespace
     - wrapcheck
-linters-settings:
-  depguard:
-    rules:
-      main:
-        files:
-          - $all
-          - "!$test"
-        allow:
-          - $gostd
-          - github.com/memes
-          - gopkg.in/yaml.v3
-          - software.sslmate.com/src/go-pkcs12
-      test:
-        files:
-          - $test
-        allow:
-          - $gostd
-          - github.com/memes
-          - go.uber.org/goleak
-          - software.sslmate.com/src/go-pkcs12
-  errcheck:
-    check-type-assertions: true
-    check-blank: true
-  gocritic:
-    # Additional checks in addition to 'stable' checks.
-    enabled-checks:
-      # Diagnostic
-      - commentedOutCode
-      - nilValReturn
-      - sloppyReassign
-      - weakCond
-      - octalLiteral
+  settings:
+    depguard:
+      rules:
+        main:
+          files:
+            - $all
+            - "!$test"
+          allow:
+            - $gostd
+            - github.com/memes
+            - gopkg.in/yaml.v3
+            - software.sslmate.com/src/go-pkcs12
+        test:
+          files:
+            - $test
+          allow:
+            - $gostd
+            - github.com/memes
+            - go.uber.org/goleak
+            - software.sslmate.com/src/go-pkcs12
+    errcheck:
+      check-type-assertions: true
+      check-blank: true
+    gocritic:
+      # Additional checks in addition to 'stable' checks.
+      enabled-checks:
+        # Diagnostic
+        - commentedOutCode
+        - nilValReturn
+        - sloppyReassign
+        - weakCond
+        - octalLiteral
 
-      # Performance
-      - appendCombine
-      - equalFold
-      - hugeParam
-      - indexAlloc
-      - rangeExprCopy
-      - rangeValCopy
+        # Performance
+        - appendCombine
+        - equalFold
+        - hugeParam
+        - indexAlloc
+        - rangeExprCopy
+        - rangeValCopy
 
-      # Style
-      - boolExprSimplify
-      - commentedOutImport
-      - docStub
-      - emptyFallthrough
-      - emptyStringTest
-      - hexLiteral
-      - methodExprCall
-      - stringXbytes
-      - typeAssertChain
-      - unlabelStmt
-      - yodaStyleExpr
+        # Style
+        - boolExprSimplify
+        - commentedOutImport
+        - docStub
+        - emptyFallthrough
+        - emptyStringTest
+        - hexLiteral
+        - methodExprCall
+        - stringXbytes
+        - typeAssertChain
+        - unlabelStmt
+        - yodaStyleExpr
 
-      # Opinionated
-      - builtinShadow
-      - importShadow
-      - initClause
-      - nestingReduce
-      - paramTypeCombine
-      - ptrToRefParam
-      - typeUnparen
-      - unnamedResult
-      - unnecessaryBlock
-  nolintlint:
-    allow-unused: false
-    allow-no-explanation: []
-    require-explanation: true
-    require-specific: true
+        # Opinionated
+        - builtinShadow
+        - importShadow
+        - initClause
+        - nestingReduce
+        - paramTypeCombine
+        - ptrToRefParam
+        - typeUnparen
+        - unnamedResult
+        - unnecessaryBlock
+    nolintlint:
+      allow-unused: false
+      allow-no-explanation: []
+      require-explanation: true
+      require-specific: true
 output:
   formats:
-    - format: tab
-  print-issued-lines: false
-  print-linter-name: true
-  sort-results: true
+    tab:
+      print-linter-name: true
