--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -18,11 +18,13 @@ permissions:
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
+    env:
+      TALISMAN_VERSION: 1.37.0
     steps:
       - uses: actions/checkout@v4
-      - name: install talisman
+      - name: Install talisman
         run: |
-          sudo curl -sLo /usr/local/bin/talisman https://github.com/thoughtworks/talisman/releases/download/v1.32.0/talisman_linux_amd64
+          sudo curl -fsSLo /usr/local/bin/talisman https://github.com/thoughtworks/talisman/releases/download/v${{ env.TALISMAN_VERSION }}/talisman_linux_amd64
           sudo chmod 0755 /usr/local/bin/talisman
       - uses: actions/setup-python@v5
         with:
